tests/compile/shader_modules/traced_params.stderr
In file included from traced_params.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:168:17: error: static assertion failed: argument type f32[3] is not supported in Stage X
  168 |                 static_assert(false, "argument type "_ss + $ss_type(T)
      |                               ^~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eVertex, rcgp::vector<float, 3>>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, rcgp::vector<float, 3>, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
In file included from traced_params.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:168:17: error: static assertion failed: argument type f32[3] is not supported in Stage X
  168 |                 static_assert(false, "argument type "_ss + $ss_type(T)
      |                               ^~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eCompute, rcgp::vector<float, 3>>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, rcgp::vector<float, 3>, rcgp::WorkGroup<1>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
In file included from traced_params.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:168:17: error: static assertion failed: argument type f32[3] is not supported in Stage X
  168 |                 static_assert(false, "argument type "_ss + $ss_type(T)
      |                               ^~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eMesh, rcgp::vector<float, 3>>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eMesh, rcgp::vector<float, 3>, rcgp::WorkGroup<1>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
3 errors generated.
